correcting the shifter name

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <pr>I now offer you the chance to see me in action! This is only my second race into Simracing!</pr>
         <br><br>
         <iframe width="900" height="600" src="https://www.youtube.com/embed/ECS0azlaHb8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <p>I've built my own racing rig incorporating my T300RS GTE racing wheel and the T3PA Shifter as you can see in the photos below!
+        <p>I've built my own racing rig incorporating my T300RS GTE racing wheel and the TH8A Shifter as you can see in the photos below!
         </p>
         <table border="5" style="border-color: coral"
                cellpadding="0"
